--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "gulp-csso": "^3.0.1",
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^8.0.0",
+    "gulp-posthtml": "^3.0.4",
     "gulp-pug": "^4.0.1",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
+    "gulp-svgstore": "^7.0.1",
     "gulp-uglify": "^3.0.1",
-    "node-sass": "^4.11.0"
+    "node-sass": "^4.11.0",
+    "posthtml-include": "^1.2.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
